<resources>
    <string name="app_name" translatable="false">PocketCrib</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="user">user</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="_123">123</string>
    <string name="item">Item</string>
    <string name="selected">Selected</string>
    <string name="requested">Requested</string>
    <string name="returned">Returned</string>
    <string name="request">Request</string>
    <string name="item_name">Item name:</string>
    <string name="item_quantity">Item Quantity:</string>
    <string name="item_type">Item Type:</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="invalid_login">Invalid username and password</string>
    <string name="check_connection">Check your network connection</string>
    <string name="myCoolButton">but</string>
    <string name="color_header">Screens background color</string>

    <string-array name="listArray">
        <item>blue</item>
        <item>green</item>
        <item>default</item>
    </string-array>

    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="colortitle">Tap to select the background color</string>
    <string name="devicescreenb">Device screen brightness</string>
    <string name="binstruction">Move left or right to change the brightness</string>
    <string name="portrait">Portrait layout only</string>
    <string name="savebuttonsummary">Tap to immediately apply and save the new settings</string>
    <string name="savebuttonname">APPLY changes and SAVE</string>
    <string name="switchsummaryoff">Portrait mode only OFF</string>
    <string name="switchsummaryon">Portrait mode only ON</string>
    <string name="logout">Logout?</string>
    <string name="logout_sure">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channeldesc</string>
    <string name="settings">Settings</string>

</resources>
