<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#8E0093"
    android:icon="@drawable/ic_settings"
    app:icon="@drawable/ic_settings">


    <PreferenceCategory
        android:background="#878080"
        app:title="@string/color_header">

        <ListPreference
            android:defaultValue="3"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues"
            android:icon="@android:drawable/button_onoff_indicator_off"
            android:key="listPref"
            android:title="@string/colortitle" />

    </PreferenceCategory>

    <PreferenceCategory
        android:background="#878080"
        app:title="@string/devicescreenb">

        <SeekBarPreference
            android:id="@+id/nikitaseek"
            android:key="seek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:title="@string/binstruction"

            android:layout_centerVertical="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:background="#878080"
        app:title="Orientation settings">

        <SwitchPreference
            android:defaultValue="false"
            android:key="portrait"
            android:title="@string/portrait"
            android:summaryOn="@string/switchsummaryon"
            android:summaryOff="@string/switchsummaryoff"

            />

    </PreferenceCategory>

    <PreferenceCategory
        android:background="#878080"
        >

        <Preference
            android:background="#F30909"
            android:backgroundTint="#FF0000"
            android:backgroundTintMode="add"
            android:foreground="@android:drawable/ic_menu_save"
            android:icon="@android:drawable/ic_menu_save"
            android:key="@string/myCoolButton"
            android:outlineAmbientShadowColor="#F30202"
            android:outlineSpotShadowColor="#F60909"
            android:summary="@string/savebuttonsummary"
            android:title="@string/savebuttonname"
            app:icon="@android:drawable/ic_menu_save" />

    </PreferenceCategory>
    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</PreferenceScreen>